feat: minor styling changes to legens button

--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -37,31 +37,6 @@ layout: base.liquid
         </ol>
     </nav>
 
-    <div id="legend-wrapper">
-        <input type="checkbox" id="legend">
-        <label aria-label="map legend list" class="legend-button" for="legend">
-          <h2>Legend</h2>
-        </label>
-        <div class="content">
-     <ol>
-       <li>Placenames (Indigenous)</li>
-       <li>Placenames (European)</li>
-       <li>Settlements (Indigenous)</li>
-       <li>Settlements (European)</li>
-       <li>Principal Rivers</li>
-       <li>Pathways and Lines</li>
-       <li>Council Fires</li>
-       <li>Placenames (Indigenous)</li>
-       <li>Placenames (European)</li>
-       <li>Settlements (Indigenous)</li>
-       <li>Settlements (European)</li>
-       <li>Principal Rivers</li>
-       <li>Pathways and Lines</li>
-       <li>Council Fires</li>
-     </ol>
-        </div>
-    </div>
-    
 
     <section id="overview">
         <article class="storyTitle">
@@ -139,6 +114,8 @@ layout: base.liquid
                 Choose the map images or feature icons to enable the filters you require.
             </p>
         </article>
+
+        
 
       <!-- <article id="half-page-filter">
             <button id="toggleButton" class="active">Toggle Element</button>
@@ -679,12 +656,108 @@ layout: base.liquid
 
 
     </section>
+</div>
+<!--<div id="filter-wrapper">
+    <input type="checkbox" id="filter">
+    <label aria-label="list of filters" class="filter-button" for="filter">
+      <h2>Filters</h2>
+    </label>
+    <div class="content">
+<p>Click on the individual features or maps to customise your view. Select or deselect all if needed.</p>
+<section>
+ <header><h3>Features <em>2/7 Selected</em></h3>
+ <span><input type="checkbox" id="selectall" name="selectall" value="All">
+<label for="selectall">Select All</label></span>
+ </header>
+ <ol>
+   <li>A</li>
+   <li>B</li>
+   <li>C</li>
+   <li>D</li>
+ </ol>
+      </section>
+ <section>
+      <header><h3>Maps <em>2/17 Selected</em></h3>
+ <span><input type="checkbox" id="selectall" name="selectall" value="All">
+<label for="selectall">Select All</label></span>
+ </header>
+                <ol>
+   <li>A</li>
+   <li>B</li>
+   <li>C</li>
+   <li>D</li>
+                       <li>A</li>
+   <li>B</li>
+   <li>C</li>
+   <li>D</li>
+                       <li>A</li>
+   <li>B</li>
+   <li>C</li>
+   <li>D</li>
+                       <li>A</li>
+   <li>B</li>
+   <li>C</li>
+   <li>D</li>
+                  
+ </ol>
+      </section>     
+    </div>-->
 
-
-
+    <!--<div id="filter-wrapper">
+        <input type="checkbox" id="legend">
+        <label aria-label="map legend list" class="legend-button" for="legend">
+          <h2>Legend</h2>
+        </label>
+        <div class="content">
+     <ol>
+       <li>Placenames (Indigenous)</li>
+       <li>Placenames (European)</li>
+       <li>Settlements (Indigenous)</li>
+       <li>Settlements (European)</li>
+       <li>Principal Rivers</li>
+       <li>Pathways and Lines</li>
+       <li>Council Fires</li>
+       <li>Placenames (Indigenous)</li>
+       <li>Placenames (European)</li>
+       <li>Settlements (Indigenous)</li>
+       <li>Settlements (European)</li>
+       <li>Principal Rivers</li>
+       <li>Pathways and Lines</li>
+       <li>Council Fires</li>
+     </ol>
+        </div>
+    </div>-->
+    
 
 </div>
 
+    <div id="legend-wrapper">
+        <input type="checkbox" id="legend">
+        <label aria-label="map legend list" class="legend-button" for="legend">
+          <h2>Legend</h2>
+        </label>
+        <div class="content">
+     <ol>
+       <li>Placenames (Indigenous)</li>
+       <li>Placenames (European)</li>
+       <li>Settlements (Indigenous)</li>
+       <li>Settlements (European)</li>
+       <li>Principal Rivers</li>
+       <li>Pathways and Lines</li>
+       <li>Council Fires</li>
+       <li>Placenames (Indigenous)</li>
+       <li>Placenames (European)</li>
+       <li>Settlements (Indigenous)</li>
+       <li>Settlements (European)</li>
+       <li>Principal Rivers</li>
+       <li>Pathways and Lines</li>
+       <li>Council Fires</li>
+     </ol>
+        </div>
+    </div>
+    
+
+</div>
 
 
 
