--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -252,12 +252,11 @@ nav {
         }
         > a {
           text-decoration: none;
-          color: darken(gray, 20%);
+          color: darken(gray, 15%);
           display: block;
           padding: 1em 0 1em 0;
           line-height: 1;
           margin-top: -0.9em;
-          opacity: 0.8;
           text-transform: uppercase;
           font-size: 1.2em;
           //@include transition(all 300ms ease-in);
@@ -268,10 +267,9 @@ nav {
           } //span
           &:hover {
             color: $midgreen;
-            opacity: 1;
           }
           &.active {
-            border-top: 18px solid darken($lightgreen, 20%);
+            border-top: 18px solid $darkgreen;
             color: black;
             font-weight: bold;
             @include transition(all 300ms ease-in);
@@ -516,6 +514,7 @@ nav {
 
 
   } //section
+
   #filter-wrapper {
     >label {
         display: block;
@@ -525,7 +524,7 @@ nav {
         transition: all 200ms ease-in;
         z-index: 2;
         cursor: pointer;
-        position: absolute;
+        position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
@@ -571,7 +570,6 @@ nav {
         }//label
       .content {
         position: fixed;
-           position: absolute;
   right: 0;
   left: 0;
   margin: auto;
@@ -645,7 +643,8 @@ justify-content: space-between;
 } //#map
 //MAP
 
-#legend-wrapper {
+
+#filter-wrapper {
   z-index: 99;
   pointer-events: auto;
   font-family: "Pontano Sans", sans-serif;
@@ -667,7 +666,7 @@ position:fixed;
         font-size: 1.2em;
         background: lighten(lightgray, 12%);
         color: black;
-        border:1px solid $midgreen;
+        border:1px solid darken(lightgray,7%);
         width: 120px;
         height: 2em;
           &:hover{
@@ -681,12 +680,15 @@ position:fixed;
         color:gray;
       }
               &:after{
-                border: 1em solid lighten(black, 35%);
-                border-right: 1em solid transparent;
+                border: 1px solid lighten(black, 35%);
+                border-right: 1px solid transparent;
               }
             ~.content{
               right:-200px; /* content on hover */
             }
+            &:before {
+              @include transform(rotate(180deg)translate(0,-1px));
+            }//&:before
           }//&:hover
           
         h2{
@@ -713,18 +715,20 @@ position:fixed;
          position: fixed;
       top:0;
       bottom:0;
-right: -225px;
+      right: -225px;
       overflow:scroll;
       font-size:14px;
       line-height: 1.6;
       width:220px;
-      margin:80px auto 20px auto;
       -moz-transition: all 200ms ease-in;
       -webkit-transition: all 200ms ease-in;
       -o-transition: all 200ms ease-in;
       transition: all 200ms ease-in; 
       background: white;
       padding: 8px 0;
+      height:400px;
+      margin: auto;
+      border:1px solid $darkgreen;
   }/* end .content */
     input#legend[type="checkbox"] {
       display: none;
@@ -752,7 +756,126 @@ right: -225px;
           }//&:after 
           &:hover{
             &:before {
-              background:lighten(black, 35%);
+              transform: translate(0, 3px);
+            }//&:before
+      }//&:hover
+}//input#filter[type="checkbox"]:checked~label.filter
+}//#filter-wrapper
+
+
+#legend-wrapper {
+  z-index: 99;
+  pointer-events: auto;
+  font-family: "Pontano Sans", sans-serif;
+  >label {
+      display: block;
+      -moz-transition: all 200ms ease-in;
+      -webkit-transition: all 200ms ease-in;
+      -o-transition: all 200ms ease-in;
+      transition: all 200ms ease-in;
+      z-index: 2;
+      cursor: pointer;
+right: -23px;
+bottom: 0;
+    top:20px;
+margin: auto;
+position:fixed;
+    @include transform(rotate(-90deg));
+    transform-origin:top center;
+        font-size: 1.2em;
+        background: lighten(lightgray, 12%);
+        color: black;
+        border:1px solid darken(lightgray,7%);
+        width: 120px;
+        height: 2em;
+          &:hover{
+            border:1px solid $darkgreen;
+                right:-18px;
+      -moz-transition: all 200ms ease-in;
+      -webkit-transition: all 200ms ease-in;
+      -o-transition: all 200ms ease-in;
+      transition: all 200ms ease-in; 
+      h2{
+        color:gray;
+      }
+              &:after{
+                border: 1px solid lighten(black, 35%);
+                border-right: 1px solid transparent;
+              }
+            ~.content{
+              right:-200px; /* content on hover */
+            }
+            &:before {
+              @include transform(rotate(180deg)translate(0,-1px));
+            }//&:before
+          }//&:hover
+          
+        h2{
+          font-size: 14px;
+          padding:6px 20px;
+          line-height: 0.5;
+          color:darken(gray,20%);
+          font-weight:normal;
+          text-transform: uppercase;
+        }//h2
+          &:before{
+            content: '▾';
+            @include transform(rotate(180deg)translate(0,-3px));
+            position: absolute;
+            right:1em;
+            bottom:0.3em;
+            -moz-transition: all 200ms ease-in;
+            -webkit-transition: all 200ms ease-in;
+            -o-transition: all 200ms ease-in;
+            transition: all 200ms ease-in;
+          }//&:before
+      }//label
+    .content {
+         position: fixed;
+      top:0;
+      bottom:0;
+      right: -225px;
+      overflow:scroll;
+      font-size:14px;
+      line-height: 1.6;
+      width:220px;
+      -moz-transition: all 200ms ease-in;
+      -webkit-transition: all 200ms ease-in;
+      -o-transition: all 200ms ease-in;
+      transition: all 200ms ease-in; 
+      background: white;
+      padding: 8px 0;
+      height:400px;
+      margin: auto;
+      border:1px solid $darkgreen;
+  }/* end .content */
+    input#legend[type="checkbox"] {
+      display: none;
+  }
+  input#legend[type="checkbox"]:checked~.content{
+      right:0px; /* content on click */
+  }
+  input#legend[type="checkbox"]:checked~label.legend-button{
+          right: 185px; 
+          background:$darkgreen;
+          h2{
+          color:white;
+          }
+          /* cross icon */
+          &:before {
+            content: '▾';
+            @include transform(rotate(0)translate(0,1px));
+            color:white;
+          }//&:before
+          &:after {   
+            -moz-transition: all 200ms ease-in;
+            -webkit-transition: all 200ms ease-in;
+            -o-transition: all 200ms ease-in;
+            transition: all 200ms ease-in;
+          }//&:after 
+          &:hover{
+            &:before {
+              transform: translate(0, 3px);
             }//&:before
       }//&:hover
 }//input#filter[type="checkbox"]:checked~label.filter
