--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,12 +262,11 @@ nav {
 }
 .mapOverlay nav > ol > li > a {
   text-decoration: none;
-  color: #4d4d4d;
+  color: #5a5a5a;
   display: block;
   padding: 1em 0 1em 0;
   line-height: 1;
   margin-top: -0.9em;
-  opacity: 0.8;
   text-transform: uppercase;
   font-size: 1.2em;
 }
@@ -278,10 +277,9 @@ nav {
 }
 .mapOverlay nav > ol > li > a:hover {
   color: #124d20;
-  opacity: 1;
 }
 .mapOverlay nav > ol > li > a.active {
-  border-top: 18px solid #4b5d04;
+  border-top: 18px solid #132b19;
   color: black;
   font-weight: bold;
   -webkit-transition: all 300ms ease-in;
@@ -540,7 +538,7 @@ nav {
   transition: all 200ms ease-in;
   z-index: 2;
   cursor: pointer;
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
@@ -584,7 +582,6 @@ nav {
 }
 .mapOverlay #filter-wrapper .content {
   position: fixed;
-  position: absolute;
   right: 0;
   left: 0;
   margin: auto;
@@ -645,6 +642,138 @@ nav {
   background: #595959;
 }
 
+#filter-wrapper {
+  z-index: 99;
+  pointer-events: auto;
+  font-family: "Pontano Sans", sans-serif;
+  /* end .content */
+}
+#filter-wrapper > label {
+  display: block;
+  -moz-transition: all 200ms ease-in;
+  -webkit-transition: all 200ms ease-in;
+  -o-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+  z-index: 2;
+  cursor: pointer;
+  right: -23px;
+  bottom: 0;
+  top: 20px;
+  margin: auto;
+  position: fixed;
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  -ms-transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  transform: rotate(-90deg);
+  transform-origin: top center;
+  font-size: 1.2em;
+  background: #f2f2f2;
+  color: black;
+  border: 1px solid #c1c1c1;
+  width: 120px;
+  height: 2em;
+}
+#filter-wrapper > label:hover {
+  border: 1px solid #132b19;
+  right: -18px;
+  -moz-transition: all 200ms ease-in;
+  -webkit-transition: all 200ms ease-in;
+  -o-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+}
+#filter-wrapper > label:hover h2 {
+  color: gray;
+}
+#filter-wrapper > label:hover:after {
+  border: 1px solid #595959;
+  border-right: 1px solid transparent;
+}
+#filter-wrapper > label:hover ~ .content {
+  right: -200px; /* content on hover */
+}
+#filter-wrapper > label:hover:before {
+  -moz-transform: rotate(180deg) translate(0, -1px);
+  -o-transform: rotate(180deg) translate(0, -1px);
+  -ms-transform: rotate(180deg) translate(0, -1px);
+  -webkit-transform: rotate(180deg) translate(0, -1px);
+  transform: rotate(180deg) translate(0, -1px);
+}
+#filter-wrapper > label h2 {
+  font-size: 14px;
+  padding: 6px 20px;
+  line-height: 0.5;
+  color: #4d4d4d;
+  font-weight: normal;
+  text-transform: uppercase;
+}
+#filter-wrapper > label:before {
+  content: "▾";
+  -moz-transform: rotate(180deg) translate(0, -3px);
+  -o-transform: rotate(180deg) translate(0, -3px);
+  -ms-transform: rotate(180deg) translate(0, -3px);
+  -webkit-transform: rotate(180deg) translate(0, -3px);
+  transform: rotate(180deg) translate(0, -3px);
+  position: absolute;
+  right: 1em;
+  bottom: 0.3em;
+  -moz-transition: all 200ms ease-in;
+  -webkit-transition: all 200ms ease-in;
+  -o-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+}
+#filter-wrapper .content {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: -225px;
+  overflow: scroll;
+  font-size: 14px;
+  line-height: 1.6;
+  width: 220px;
+  -moz-transition: all 200ms ease-in;
+  -webkit-transition: all 200ms ease-in;
+  -o-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+  background: white;
+  padding: 8px 0;
+  height: 400px;
+  margin: auto;
+  border: 1px solid #132b19;
+}
+#filter-wrapper input#legend[type=checkbox] {
+  display: none;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ .content {
+  right: 0px; /* content on click */
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.legend-button {
+  right: 185px;
+  background: #132b19;
+  /* cross icon */
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.legend-button h2 {
+  color: white;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:before {
+  content: "▾";
+  -moz-transform: rotate(0) translate(0, 1px);
+  -o-transform: rotate(0) translate(0, 1px);
+  -ms-transform: rotate(0) translate(0, 1px);
+  -webkit-transform: rotate(0) translate(0, 1px);
+  transform: rotate(0) translate(0, 1px);
+  color: white;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:after {
+  -moz-transition: all 200ms ease-in;
+  -webkit-transition: all 200ms ease-in;
+  -o-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+}
+#filter-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:hover:before {
+  transform: translate(0, 3px);
+}
+
 #legend-wrapper {
   z-index: 99;
   pointer-events: auto;
@@ -673,7 +802,7 @@ nav {
   font-size: 1.2em;
   background: #f2f2f2;
   color: black;
-  border: 1px solid #124d20;
+  border: 1px solid #c1c1c1;
   width: 120px;
   height: 2em;
 }
@@ -689,11 +818,18 @@ nav {
   color: gray;
 }
 #legend-wrapper > label:hover:after {
-  border: 1em solid #595959;
-  border-right: 1em solid transparent;
+  border: 1px solid #595959;
+  border-right: 1px solid transparent;
 }
 #legend-wrapper > label:hover ~ .content {
   right: -200px; /* content on hover */
+}
+#legend-wrapper > label:hover:before {
+  -moz-transform: rotate(180deg) translate(0, -1px);
+  -o-transform: rotate(180deg) translate(0, -1px);
+  -ms-transform: rotate(180deg) translate(0, -1px);
+  -webkit-transform: rotate(180deg) translate(0, -1px);
+  transform: rotate(180deg) translate(0, -1px);
 }
 #legend-wrapper > label h2 {
   font-size: 14px;
@@ -727,13 +863,15 @@ nav {
   font-size: 14px;
   line-height: 1.6;
   width: 220px;
-  margin: 80px auto 20px auto;
   -moz-transition: all 200ms ease-in;
   -webkit-transition: all 200ms ease-in;
   -o-transition: all 200ms ease-in;
   transition: all 200ms ease-in;
   background: white;
   padding: 8px 0;
+  height: 400px;
+  margin: auto;
+  border: 1px solid #132b19;
 }
 #legend-wrapper input#legend[type=checkbox] {
   display: none;
@@ -765,5 +903,5 @@ nav {
   transition: all 200ms ease-in;
 }
 #legend-wrapper input#legend[type=checkbox]:checked ~ label.legend-button:hover:before {
-  background: #595959;
+  transform: translate(0, 3px);
 }
