--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -703,33 +703,148 @@ layout: base.liquid
       </section>     
     </div>-->
 
-    <!--<div id="filter-wrapper">
-        <input type="checkbox" id="legend">
-        <label aria-label="map legend list" class="legend-button" for="legend">
-          <h2>Legend</h2>
+    <div id="filter-wrapper">
+        <input type="checkbox" id="filter">
+        <label aria-label="filter list" class="filter-button" for="filter">
+          <h2>Filter</h2>
         </label>
         <div class="content">
-     <ol>
-       <li>Placenames (Indigenous)</li>
-       <li>Placenames (European)</li>
-       <li>Settlements (Indigenous)</li>
-       <li>Settlements (European)</li>
-       <li>Principal Rivers</li>
-       <li>Pathways and Lines</li>
-       <li>Council Fires</li>
-       <li>Placenames (Indigenous)</li>
-       <li>Placenames (European)</li>
-       <li>Settlements (Indigenous)</li>
-       <li>Settlements (European)</li>
-       <li>Principal Rivers</li>
-       <li>Pathways and Lines</li>
-       <li>Council Fires</li>
-     </ol>
-        </div>
-    </div>-->
-    
+<p>Click on the individual features or maps to customise your view. Select or deselect all if needed.</p>
+<section>
+ <header><h3>Features <em>2/7 Selected</em></h3>
+ <span><input type="checkbox" id="selectall" name="selectall" value="All">
+<label for="selectall">Select All</label></span>
+ </header>
+ <ol>
+    <li>Placenames (Indigenous)</li>
+    <li>Placenames (European)</li>
+    <li>Settlements (Indigenous)</li>
+    <li>Settlements (European)</li>
+    <li>Principal Rivers</li>
+    <li>Pathways and Lines</li>
+    <li>Council Fires</li>
+ </ol>
+      </section>
+ <section>
+      <header><h3>Maps <em>2/17 Selected</em></h3>
+ <span><input type="checkbox" id="selectall" name="selectall" value="All">
+<label for="selectall">Select All</label></span>
+ </header>
+                <ol>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1"
+                               class="map_filter" id="checkbox1"/>
+                        <label for="checkbox1">
+                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1590 White</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="2"
+                               class="map_filter" id="checkbox2"/>
+                        <label for="checkbox2">
+                            <img
+                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1650 Bleau</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="3"
+                               class="map_filter" id="checkbox3"/>
+                        <label for="checkbox3">
+                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1676 Seller</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="5"
+                               class="map_filter" id="checkbox4"/>
+                        <label for="checkbox4">
+                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1677 Foster</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="6"
+                               class="map_filter" id="checkbox5"/>
+                        <label for="checkbox5">
+                            <img
+                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1720 Moll</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="7"
+                               class="map_filter" id="checkbox6"/>
+                        <label for="checkbox6">
+                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1738 Burghers</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="8"
+                               class="map_filter" id="checkbox8"/>
+                        <label for="checkbox8">
+                            <img
+                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1752 Evans</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="10"
+                               class="map_filter" id="checkbox9"/>
+                        <label for="checkbox9">
+                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1755 Herbert</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="11"
+                               class="map_filter" id="checkbox10"/>
+                        <label for="checkbox10">
+                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1755 Moll</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="12"
+                               class="map_filter" id="checkbox11"/>
+                        <label for="checkbox11">
+                            <img
+                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1755 Mitchell</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="13"
+                               class="map_filter" id="checkbox12"/>
+                        <label for="checkbox12">
+                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1772 Bowen</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="14"
+                               class="map_filter" id="checkbox13"/>
+                        <label for="checkbox13">
+                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1774 Jefferys</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="15"
+                               class="map_filter" id="checkbox14"/>
+                        <label for="checkbox14">
+                            <img
+                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1778 Hutchins</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="16"
+                               class="map_filter" id="checkbox15"/>
+                        <label for="checkbox15">
+                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1783 Cary</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="17"
+                               class="map_filter" id="checkbox16"/>
+                        <label for="checkbox16">
+                            <img src="https://accessgenealogy.com/wp-content/uploads/2011/07/1755-Mitchell-Map-3-1080x763.jpg"/><span>1784 Buell</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="18"
+                               class="map_filter" id="checkbox17"/>
+                        <label for="checkbox17">
+                            <img
+                                    src="https://i5.walmartimages.com/asr/a38e5625-1031-479a-9b35-266e586ecd52_3.bbdfa3a052b52f8616bc011236bc4f31.jpeg"/><span>1794 Russell</span>
+                        </label>
+                    </li>
+                    <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="19"
+                               class="map_filter" id="checkbox18"/>
+                        <label for="checkbox18">
+                            <img src="https://i.ebayimg.com/images/g/ojsAAOSwNEVdXw0v/s-l1600.jpg"/><span>1796 Bradley</span>
+                        </label>
+                    </li>
 
-</div>
+                  
+ </ol>
+      </section>     
+    </div>
+    </div>
 
     <div id="legend-wrapper">
         <input type="checkbox" id="legend">
