--- a/frontend/_includes/stories.liquid
+++ b/frontend/_includes/stories.liquid
@@ -716,13 +716,52 @@ layout: base.liquid
 <label for="selectall">Select All</label></span>
  </header>
  <ol>
-    <li>Placenames (Indigenous)</li>
-    <li>Placenames (European)</li>
-    <li>Settlements (Indigenous)</li>
-    <li>Settlements (European)</li>
-    <li>Principal Rivers</li>
-    <li>Pathways and Lines</li>
-    <li>Council Fires</li>
+    <ol>
+        <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="1"
+                   class="map_filter" id="checkbox1"/>
+            <label for="checkbox1">
+                <img src="https://static.thenounproject.com/png/717161-200.png"/><span>Placenames (Indigenous)</span>
+            </label>
+        </li>
+        <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="2"
+                   class="map_filter" id="checkbox2"/>
+            <label for="checkbox2">
+                <img
+                        src="https://static.thenounproject.com/png/1779673-200.png"/><span>Placenames (European)</span>
+            </label>
+        </li>
+        <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="3"
+                   class="map_filter" id="checkbox3"/>
+            <label for="checkbox3">
+                <img src="https://static.thenounproject.com/png/3957514-200.png"/><span>Settlements (Indigenous)</span>
+            </label>
+        </li>
+        <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="5"
+                   class="map_filter" id="checkbox4"/>
+            <label for="checkbox4">
+                <img src="https://static.thenounproject.com/png/1461154-200.png"/><span>Settlements (European)</span>
+            </label>
+        </li>
+        <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="6"
+                   class="map_filter" id="checkbox5"/>
+            <label for="checkbox5">
+                <img
+                        src="https://static.thenounproject.com/png/2615726-200.png"/><span>Principal Rivers</span>
+            </label>
+        </li>
+        <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="7"
+                   class="map_filter" id="checkbox6"/>
+            <label for="checkbox6">
+                <img src="https://static.thenounproject.com/png/4256430-200.png"/><span>Pathways and Lines</span>
+            </label>
+        </li>
+        <li><input type="checkbox" data-featuretype="all" data-criteria="map_source" data-filtervalue="8"
+                   class="map_filter" id="checkbox8"/>
+            <label for="checkbox8">
+                <img
+                        src="https://static.thenounproject.com/png/2631029-200.png"/><span>Council Fires</span>
+            </label>
+        </li>
  </ol>
       </section>
  <section>
