--- a/frontend/assets/css/style.scss
+++ b/frontend/assets/css/style.scss
@@ -515,127 +515,6 @@ nav {
 
   } //section
 
-  #filter-wrapper {
-    >label {
-        display: block;
-        -moz-transition: all 200ms ease-in;
-        -webkit-transition: all 200ms ease-in;
-        -o-transition: all 200ms ease-in;
-        transition: all 200ms ease-in;
-        z-index: 2;
-        cursor: pointer;
-        position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-          font-size: 1.2em;
-          background: lighten(black, 10%);
-          color: white;
-          width: 140px;
-          height: 2em;
-          box-shadow: lighten(black, 15%) 0.1em 0.1em 0.3em;
-            &:hover{
-                background:lighten(black, 15%);
-                  bottom:0.3em;
-        -moz-transition: all 200ms ease-in;
-        -webkit-transition: all 200ms ease-in;
-        -o-transition: all 200ms ease-in;
-        transition: all 200ms ease-in; 
-                &:after{
-                  border: 1em solid lighten(black, 35%);
-                  border-right: 1em solid transparent;
-                }
-              ~.content{
-                bottom:-190px; /* content on hover */
-              }
-            }//&:hover
-            
-          h2{
-            font-size: 1em;
-            padding:0 0.8em;
-            line-height: 0.5;
-          }//h2
-            &:before{
-              content: '▴';
-              position: absolute;
-              right:1em;
-              bottom:0.3em;
-              -moz-transition: all 200ms ease-in;
-              -webkit-transition: all 200ms ease-in;
-              -o-transition: all 200ms ease-in;
-              transition: all 200ms ease-in;
-            }//&:before
-
-        }//label
-      .content {
-        position: fixed;
-  right: 0;
-  left: 0;
-  margin: auto;
-        bottom: -200px;
-        width:50%;
-        height:200px;
-        overflow:scroll;
-        -moz-transition: all 200ms ease-in;
-        -webkit-transition: all 200ms ease-in;
-        -o-transition: all 200ms ease-in;
-        transition: all 200ms ease-in; 
-        background: lighten(black, 95%);
-        padding: 8px 16px 8px 16px;
-        line-height: 1.4;
-        display:flex;
-         justify-content: space-between;
-  flex-wrap: wrap;
-        p {
-          width:100%;
-        } // p 
-        section{
-          border:1px solid black;
-          width:45%;
-          header{
-            display:flex;
-            align-items: stretch;
-justify-content: space-between;
-            h3{
-              margin:0;
-              em{
-                color:gray;
-                font-size:0.6em;
-              }
-            }
-          }//header
-        }//section
-        
-        
-        
-        
-    }/* end .content */
-      input#filter[type="checkbox"] {
-        display: none;
-    }
-    input#filter[type="checkbox"]:checked~.content{
-        bottom:2px; /* content on click */
-    }
-    input#filter[type="checkbox"]:checked~label.filter-button{
-            bottom: 8.2em; 
-            /* cross icon */
-            &:before {
-              content: '▾';
-            }//&:before
-            &:after {   
-              -moz-transition: all 200ms ease-in;
-              -webkit-transition: all 200ms ease-in;
-              -o-transition: all 200ms ease-in;
-              transition: all 200ms ease-in;
-            }//&:after 
-            &:hover{
-              &:before {
-                background:lighten(black, 35%);
-              }//&:before
-        }//&:hover
-}//input#filter[type="checkbox"]:checked~label.filter
-}//#filter-wrapper
 
 
 
@@ -671,13 +550,7 @@ position:fixed;
           &:hover{
             border:1px solid $darkgreen;
                 bottom:12px;
-      -moz-transition: all 200ms ease-in;
-      -webkit-transition: all 200ms ease-in;
-      -o-transition: all 200ms ease-in;
-      transition: all 200ms ease-in; 
-      h2{
-        color:gray;
-      }
+            @include transition(all 400ms ease-in); 
               &:after{
                 border: 1px solid lighten(black, 35%);
                 border-right: 1px solid transparent;
@@ -694,7 +567,7 @@ position:fixed;
           font-size: 14px;
           padding:6px 20px;
           line-height: 0.2;
-          color:darken(gray,20%);
+          color:darken(gray,25%);
           font-weight:normal;
           text-transform: uppercase;
         }//h2
@@ -704,10 +577,7 @@ position:fixed;
             position: absolute;
             right:1em;
             bottom:0.3em;
-            -moz-transition: all 200ms ease-in;
-            -webkit-transition: all 200ms ease-in;
-            -o-transition: all 200ms ease-in;
-            transition: all 200ms ease-in;
+            @include transition(all 400ms ease-in); 
           }//&:before
       }//label
     .content {
@@ -719,10 +589,7 @@ position:fixed;
       font-size:14px;
       line-height: 1.6;
       width:800px;
-      -moz-transition: all 200ms ease-in;
-      -webkit-transition: all 200ms ease-in;
-      -o-transition: all 200ms ease-in;
-      transition: all 200ms ease-in; 
+      @include transition(all 400ms ease-in); 
       background: white;
       padding: 8px 16px;
       height:400px;
@@ -785,10 +652,6 @@ justify-content: space-between;
               :checked + label{
                 //transform: scale(1);
               }//:checked + label img
-     
-
-
-
             }//&:hover
             input[type="checkbox"][id^="checkbox"] {
               display: none;
@@ -815,7 +678,12 @@ justify-content: space-between;
           }*/
         }//ol
       }//section
-
+      section:first-of-type{
+        ol li img{
+          border-radius: 0;
+          border:none;
+        }
+      }
   }/* end .content */
     input#filter[type="checkbox"] {
       display: none;
@@ -835,12 +703,6 @@ justify-content: space-between;
             @include transform(rotate(0)translate(0,1px));
             color:white;
           }//&:before
-          &:after {   
-            -moz-transition: all 200ms ease-in;
-            -webkit-transition: all 200ms ease-in;
-            -o-transition: all 200ms ease-in;
-            transition: all 200ms ease-in;
-          }//&:after 
           &:hover{
             &:before {
               transform: translate(0, 3px);
@@ -856,10 +718,7 @@ justify-content: space-between;
   font-family: "Pontano Sans", sans-serif;
   >label {
       display: block;
-      -moz-transition: all 200ms ease-in;
-      -webkit-transition: all 200ms ease-in;
-      -o-transition: all 200ms ease-in;
-      transition: all 200ms ease-in;
+      @include transition(all 400ms ease-in); 
       z-index: 2;
       cursor: pointer;
 right: -23px;
@@ -878,13 +737,7 @@ position:fixed;
           &:hover{
             border:1px solid $darkgreen;
                 right:-18px;
-      -moz-transition: all 200ms ease-in;
-      -webkit-transition: all 200ms ease-in;
-      -o-transition: all 200ms ease-in;
-      transition: all 200ms ease-in; 
-      h2{
-        color:gray;
-      }
+                @include transition(all 400ms ease-in); 
               &:after{
                 border: 1px solid lighten(black, 35%);
                 border-right: 1px solid transparent;
@@ -901,7 +754,7 @@ position:fixed;
           font-size: 14px;
           padding:6px 20px;
           line-height: 0.5;
-          color:darken(gray,20%);
+          color:darken(gray,25%);
           font-weight:normal;
           text-transform: uppercase;
         }//h2
@@ -911,10 +764,7 @@ position:fixed;
             position: absolute;
             right:1em;
             bottom:0.3em;
-            -moz-transition: all 200ms ease-in;
-            -webkit-transition: all 200ms ease-in;
-            -o-transition: all 200ms ease-in;
-            transition: all 200ms ease-in;
+            @include transition(all 400ms ease-in); 
           }//&:before
       }//label
     .content {
@@ -926,10 +776,7 @@ position:fixed;
       font-size:14px;
       line-height: 1.6;
       width:220px;
-      -moz-transition: all 200ms ease-in;
-      -webkit-transition: all 200ms ease-in;
-      -o-transition: all 200ms ease-in;
-      transition: all 200ms ease-in; 
+      @include transition(all 400ms ease-in); 
       background: white;
       padding: 8px 0;
       height:400px;
@@ -954,12 +801,6 @@ position:fixed;
             @include transform(rotate(0)translate(0,1px));
             color:white;
           }//&:before
-          &:after {   
-            -moz-transition: all 200ms ease-in;
-            -webkit-transition: all 200ms ease-in;
-            -o-transition: all 200ms ease-in;
-            transition: all 200ms ease-in;
-          }//&:after 
           &:hover{
             &:before {
               transform: translate(0, 3px);
